<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_edittext1">Username</string>
    <string name="enter_edittext2">Password</string>
    <string name="enter_edittext3">Re-password</string>
    <string name="btn_enter">Enter</string>
    <string name="tab_login">Login</string>
    <string name="tab_regist">Registration</string>
    <string name="btn_registr">Registration!</string>


</resources>
