<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_gravity="center_vertical"
            android:hint="@string/enter_edittext1"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHighlight="@android:color/holo_red_dark"
            style="@style/Theme.Redstyle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/enter_edittext2"
            style="@style/Theme.Redstyle" />

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/btn_enter"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12"
        style="@style/Theme.Redstyle" />

</LinearLayout>